feat: Add more nested pycache to ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 models/__pycache__/
 models/engine/__pycache__/
+web_dynamic/__pycache__/0-hbnb.cpython-38.pyc
+web_dynamic./__pycache__/__init__.cpython-38.pyc
