feat: Include another pycache dir to untrack

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 models/__pycache__/
 models/engine/__pycache__/
+web_dynamic/__pycache__
 web_dynamic/__pycache__/0-hbnb.cpython-38.pyc
 web_dynamic./__pycache__/__init__.cpython-38.pyc
