feat: Add some pycache dir to untrack list

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ web_dynamic/__pycache__
 web_dynamic/__pycache__/0-hbnb.cpython-38.pyc
 web_dynamic./__pycache__/__init__.cpython-38.pyc
 10-filter_dump.sql
+api/__pycache__/
+api/v1/__pycache__/
+api/v1/views/__pycache__/
